@@ -111,7 +111,11 @@ On the "Timesheet" page, users can track their work time across different projec
 
 ## Habits
 
-The "Habits" page has two top-level sections: "My habits" and "Habit ideas." "My Habits" consists of three sections. The "manage" section, where the user can reorder, edit, delete, and add new habits. The "track" section, which displays a table with the habits and checkboxes for the last 30 days, where the user can check off the habits they have done. They can also "reset" habits to have a fresh start by clicking on the "Reset habit(s)" button, which opens a modal where the user can select either all habits or specific habits to be reset. This will make them start from today and will remove all the tracked data. The "report" section contains a table of habits with a streak, success rate, and when the habit has been started. The "Habit ideas" section consists of a list of suggested habits for a fulfilling life, categorized into health, relationships, and work that the user can add to their habits.
+The "Habits" page has three tabs: "Track", "Stats", and "Explore". Both the "Track" and "Stats" have a similar layout with a list of habits listed on the left, but on "Track" sub-page there is a grid of days by clicking on a day the user can mark the habit as done or not done. The "Stats" sub-page shows a table with the habits and their streak, consistency, and when the habit has been started. The user can edit or delete habits from the "Track" and "Stats" sub-pages. The user can also reset a specific habit.
+
+In the header of the "Track" sub-page there is also a "Reset habits" button that will reset all habits to have a fresh start, meaning that all the tracked data will be removed and the habits will start from today.
+
+The "Explore" sub-page consists of a list of suggested habits for a fulfilling life, categorized into health, relationships, and work that the user can add to their habits.
 
 To help users remember to track their habits, a prompt appears in the sidebar navigation next to the "Habits" item. This prompt will show up if the user hasn't visited the "Habits" page that day.
 
